Commit of change in files to include the experiment method that is called once the web server is registered.