@@ -1,11 +1,11 @@
-	package restController;
+package restController;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.commons.lang3.StringUtils;
-import org.eclipse.emf.henshin.interpreter.impl.EGraphImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -15,9 +15,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import restassured.riskpattern.CloudModel.CloudEnvironment;
-import riskpatternfinder.AdaptationFinderToMitigateRisks.AdaptationAlgorithm;
 import runtime.EMFModelLoad;
-import runtime.ExecutionAdapter;
 import runtime.Gateway;
 import runtime.RiskFinder;
 import runtime.RuntimeModelLogic;
@@ -33,7 +31,6 @@ public class MonitoringController {
 	private RuntimeModelLogic runtimeModelLogic;
 	@Autowired
 	private RiskFinder riskFinder;
-	
 
 	/*
 	 * Used to register a new ServiceInstance with the RestAssured application: This
@@ -45,39 +42,31 @@ public class MonitoringController {
 	 * id of the altered Service in the response body, or -1 if the request failed
 	 * for any reason.
 	 */
-	//First Part of the Body is "model" and second Part is "URL Monitoring" and third Part is "URL Execution"
-	//Parts are separated by &
-	
+	// First Part of the Body is "model" and second Part is "URL Monitoring" and
+	// third Part is "URL Execution"
+	// Parts are separated by &
+
 	@RequestMapping(path = "/registerManagedSystem", method = RequestMethod.POST, consumes = "*/*; charset=UTF-8")
 	@ResponseBody
 	public long registerManagedSystem(@RequestBody(required = true) String jsonServiceInstance) {
 		String decodedWithEqualsSign;
 		long returner = -1;
-		try 
-		{
-			decodedWithEqualsSign = URLDecoder.decode(jsonServiceInstance, "UTF-8");
-			String url[] = decodedWithEqualsSign.split("&");
+		try {
+			decodedWithEqualsSign = URLDecoder.decode(jsonServiceInstance, StandardCharsets.UTF_8);
+			String[] url = decodedWithEqualsSign.split("&");
 			String model = StringUtils.strip(url[0], "=");
 			String monitoringRestUrl = StringUtils.strip(url[1], "=");
 			String executionRestUrl = StringUtils.strip(url[2], "=");
-//			System.out.println("JSON-service submitted: " + decoded);
-			// Create Object out of JSON
-			CloudEnvironment cloudEnvironment = (CloudEnvironment) loader.loadEObjectFromString(model);
-			
-//			String jsonString = loader.getMapper().writerWithDefaultPrettyPrinter()
-//					.writeValueAsString(cloudEnvironment);
-//			System.out.println("Loaded:" + jsonString);
-			
-			returner = loader.setCloudEnvironmentsMonitored(cloudEnvironment, 0);
-			gateway.registerNewAdapterTestApplication(returner, monitoringRestUrl, executionRestUrl);
-			
-			riskFinder.lookForRisks(cloudEnvironment, returner, AdaptationAlgorithm.BestFirstSearch, "", 0, 10);
-			gateway.startMonitoring(returner, monitoringRestUrl, executionRestUrl);
 
+			CloudEnvironment cloudEnvironment = (CloudEnvironment) loader.loadEObjectFromString(model);
+
+			long monitoredEnvironmentId = loader.setCloudEnvironmentsMonitored(cloudEnvironment, 0);
+			gateway.registerAdapterForVaporWebServer(monitoredEnvironmentId, monitoringRestUrl, executionRestUrl);
+
+			riskFinder.runExperiment(model, cloudEnvironment, monitoredEnvironmentId, runtimeModelLogic);
 		} catch (UnsupportedEncodingException e) {
 			System.err.println(e);
 		} catch (IOException e) {
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
 		return returner; // should return the id of the instance
